# backend/routes/userRoutes.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import UserController from '../controllers/UserController';
 import jwtAuthentication from '../middleware/jwtAuthentication';
+import optionalJwtAuthentication from '../middleware/optionalJwtAuthentication';
 
 const router = Router();
 
@@ -8,5 +9,6 @@ router.post('/register', UserController.register);
 router.get('/search', jwtAuthentication, UserController.profileSearch);
 router.post('/create-channel', jwtAuthentication, UserController.createChannel);
 router.post('/subscribe/:id', jwtAuthentication, UserController.subscribe);
+router.get('/profile-preview/:id', optionalJwtAuthentication, UserController.profilePreview);
 
 export default router;
